feat: create sensor cmd
create automation cmd
trigger sensor cmd
