# docs/swagger.json
@@ -161,6 +161,92 @@
                 }
             }
         },
+        "/c/automation/bindSensor": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Automation Command API"
+                ],
+                "parameters": [
+                    {
+                        "description": "Binds Sensor to Automation",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateSensorAutomationBindingRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/c/automation/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Automation Command API"
+                ],
+                "parameters": [
+                    {
+                        "description": "Creates automation",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/CreateAutomationRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/c/list/moveTasks": {
             "post": {
                 "security": [
@@ -249,7 +335,51 @@
                 }
             }
         },
-        "/c/sensor/run": {
+        "/c/sensor/create": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "returns the creates sensor id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sensor Command API"
+                ],
+                "parameters": [
+                    {
+                        "description": "Create sensor",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/sensor.createRequestBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/CommandResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/c/sensor/trigger": {
             "post": {
                 "security": [
                     {
@@ -268,7 +398,7 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Sensor trigger",
+                        "description": "Trigger sensor",
                         "name": "body",
                         "in": "body",
                         "required": true,
@@ -765,6 +895,17 @@
                 }
             }
         },
+        "CreateAutomationRequestBody": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "CreateProjectRequestBody": {
             "type": "object",
             "required": [
@@ -781,6 +922,25 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "CreateSensorAutomationBindingRequestBody": {
+            "type": "object",
+            "required": [
+                "automation",
+                "name",
+                "sensor"
+            ],
+            "properties": {
+                "automation": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "sensor": {
                     "type": "string"
                 }
             }
@@ -1096,6 +1256,17 @@
                     "items": {
                         "$ref": "#/definitions/projects.populatedProject"
                     }
+                }
+            }
+        },
+        "sensor.createRequestBody": {
+            "type": "object",
+            "required": [
+                "name"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
                 }
             }
         },
